tests/rosetta/transpiler/FS/circles-of-given-radius-through-two-points.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/circles-of-given-radius-through-two-points.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Circles-of-given-radius-through-two-points' based on the file name 'circles-of-given-radius-through-two-points.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/circles-of-given-radius-through-two-points.fs(97,42): error FS0193: Type constraint mismatch. The type 
    obj    
is not compatible with type
    Point    
The type 'obj' is not compatible with the type 'Point'

/workspace/mochi/tests/rosetta/transpiler/FS/circles-of-given-radius-through-two-points.fs(97,68): error FS0193: Type constraint mismatch. The type 
    obj    
is not compatible with type
    Point    
The type 'obj' is not compatible with the type 'Point'

/workspace/mochi/tests/rosetta/transpiler/FS/circles-of-given-radius-through-two-points.fs(98,42): error FS0193: Type constraint mismatch. The type 
    obj    
is not compatible with type
    Point    
The type 'obj' is not compatible with the type 'Point'

/workspace/mochi/tests/rosetta/transpiler/FS/circles-of-given-radius-through-two-points.fs(98,68): error FS0193: Type constraint mismatch. The type 
    obj    
is not compatible with type
    Point    
The type 'obj' is not compatible with the type 'Point'

/workspace/mochi/tests/rosetta/transpiler/FS/circles-of-given-radius-through-two-points.fs(100,34): error FS0001: This expression was expected to have type
    Point    
but here has type
    obj    

/workspace/mochi/tests/rosetta/transpiler/FS/circles-of-given-radius-through-two-points.fs(100,37): error FS0001: This expression was expected to have type
    Point    
but here has type
    obj    

/workspace/mochi/tests/rosetta/transpiler/FS/circles-of-given-radius-through-two-points.fs(100,40): error FS0001: This expression was expected to have type
    float    
but here has type
    obj    
